# axle-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DASHBOARD.md  HEARTBEAT.md  IDENTITY.md  PROJECTS.md  README.md  RENAME_TO_AXLE.md  SOUL.md  TOOLS.md  USER.md  check-site.mjs  dashboard.html  datecourse-api-research.md  hashed-vibe-labs-strategy.md  market-research-2026-02-03.md  morning-plan.md  package-lock.json  package.json  pnpm-lock.yaml
.clawhub/: lock.json
assets/: capture.mjs  package-lock.json  package.json  twitter-header.html  twitter-profile.html
axle-earn/: pnpm-lock.yaml  supabase-schema.sql
axle-proxy/: README.md  package-lock.json  package.json  tsconfig.json
bts-ticketing/: .env.5accounts.template  .env.example  .env.local  .env.local.example  .env.local.template  API_VS_PLAYWRIGHT.md  ARCHITECTURE.md  BUGFIX-LOG.md  CLOUD-DEPLOY.md  CODE-REVIEW-V4.md  DEBATE.md  FULL-SPEC-PLAN.md  HANDOFF.md  PLAN.md  PROBLEM_ANALYSIS.md  PROMPTS.md  QA-REPORT.md  README.md  REDESIGN.md  REVIEW.md  REVIEW_V2.md  RISK-ANALYSIS.md  RUNBOOK_OPEN_TIME.md  SCORECARD.md  SWITCH_TO_FIX_SUMMARY.md  USER-MANUAL.md  WORKLOG.md  cookies.json  proxies.txt  requirements.txt  test_frame_switching.py  test_proxy.py
contracts/agent_protocol/: Anchor.toml  Cargo.toml
contracts/agent_protocol/programs/agent_protocol/: Cargo.toml
contracts/agent_protocol/programs/agent_protocol/src/: lib.rs
contracts/agent_protocol/tests/: agent_protocol.ts
dashboard/: next.config.js  package-lock.json  package.json  progress.html  tailwind.config.ts
docs/: AGENT-API-SPEC.md  (+21 more)
(+1165 files in other folders)
