[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
blake3 = { path = "/tmp/constant_time_eq_fix/blake3" }
constant_time_eq = { path = "/tmp/constant_time_eq_fix/constant_time_eq" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
